@@ -368,8 +368,8 @@ extern int parse_image(void **dest, slurm_parser_enum_t type,
 				image_group->name = xmalloc(i-j+2);
 				snprintf(image_group->name,
 					 (i-j)+1, "%s", tmp+j);
-				image_group->gid =
-					gid_from_string(image_group->name);
+				gid_from_string (image_group->name,
+						&image_group->gid);
 				debug3("adding group %s %d", image_group->name,
 				       image_group->gid);
 				list_append(n->groups, image_group);
@@ -381,15 +381,14 @@ extern int parse_image(void **dest, slurm_parser_enum_t type,
 			image_group = xmalloc(sizeof(image_group_t));
 			image_group->name = xmalloc(i-j+2);
 			snprintf(image_group->name, (i-j)+1, "%s", tmp+j);
-			image_group->gid = gid_from_string(image_group->name);
-			if (image_group->gid == (gid_t) -1) {
+			if (gid_from_string (image_group->name,
+			                     &image_group->gid) < 0)
 				fatal("Invalid bluegene.conf parameter "
 				      "Groups=%s", 
 				      image_group->name);
-			} else {
+			else
 				debug3("adding group %s %d", image_group->name,
 				       image_group->gid);
-			}
 			list_append(n->groups, image_group);
 		}
 		xfree(tmp);
