@@ -424,21 +424,21 @@ _build_user_list( char* str )
 	List my_list;
 	char *user = NULL;
 	char *tmp_char = NULL, *my_user_list = NULL;
-	uint32_t *uid = NULL;
+	uid_t uid = (uid_t) 0;
 
 	if ( str == NULL)
 		return NULL;
+
 	my_list = list_create( NULL );
 	my_user_list = xstrdup( str );
 	user = strtok_r( my_user_list, ",", &tmp_char );
 	while (user) {
-		uid = xmalloc( sizeof( uint32_t ));
-		*uid = uid_from_string(user);
-		if (*uid == -1) {
+		if (uid_from_string (user, &uid) < 0) {
 			error( "Invalid user: %s\n", user);
-			xfree(uid);
 		} else {
-			list_append( my_list, uid );
+			uint32_t *u_tmp = xmalloc( sizeof( uint32_t ));
+			*u_tmp = (uint32_t) uid;
+			list_append( my_list, u_tmp );
 		}
 		user = strtok_r (NULL, ",", &tmp_char);
 	}
